--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
   {% if uv_index is not none %}
     <section>
       <h2>Today's UV Index: <strong>{{ uv_index }}</strong></h2>
+      <h2>Cloudy: <strong>{{ cloudy }}</strong></h2>
+
       <p><strong>Advice:</strong> {{ advice }}</p>
     </section>
   {% else %}
