display advice in html

--- a/app/templates/test_css.html
+++ b/app/templates/test_css.html
@@ -46,7 +46,9 @@
                     <span>👕</span> Clothing Recommendation
                 </div>
                 <div class="advice-content">
-                    {{ advice }}
+{#					<div style="white-space: pre-wrap;">#}
+					  {{ robot_advice }}
+{#					</div>#}
                 </div>
             </div>
 
