--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <small>Powered by NIWA UV API & OpenWeatherMap</small>
+    <small>Powered by NIWA UV API, OpenWeatherMap API, & Ollama</small>
 </footer>
