--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,8 +1,10 @@
 <nav class="navbar">
     <a href="{{ url_for('main.index') }}">Home</a>
     {% if current_user.is_authenticated %}
+        <span>Welcome, {{ current_user.username }}!</span>
         <a href="{{ url_for('auth.logout') }}">Logout</a>
     {% else %}
         <a href="{{ url_for('auth.login') }}">Login</a>
+        <a href="{{ url_for('auth.register') }}">Register</a>
     {% endif %}
 </nav>
