--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="card">
-        <form method="POST" action="{{ url_for('main.user_location') }}">
+        <form method="POST" action="{{ url_for('main.set_location') }}">
             <label for="location-select">Or select your location:</label>
             <select id="location-select" name="lat_lon" required>
                 <option value="">-- Choose a location --</option>
