--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,3 +1,4 @@
+<div class="container">
 <nav class="navbar">
     <a href="{{ url_for('main.index') }}">Home</a>
     {% if current_user.is_authenticated %}
@@ -8,3 +9,4 @@
         <a href="{{ url_for('auth.register') }}">Register</a>
     {% endif %}
 </nav>
+</div>
